crates/sdk/tests/macros/error_event_on_struct.stderr
error: #[serde(content = "...")] can only be used on enums
 --> tests/macros/error_event_on_struct.rs:5:1
  |
5 | #[app::event]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `app::event` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InvalidStructEvent: serde::Serialize` is not satisfied
 --> tests/macros/error_event_on_struct.rs:5:1
  |
5 | #[app::event]
  | ^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `InvalidStructEvent`
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `InvalidStructEvent` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = note: required for `&InvalidStructEvent` to implement `Serialize`
note: required by a bound in `to_value`
 --> $CARGO/serde_json-$VERSION/src/value/mod.rs
  |
  | pub fn to_value<T>(value: T) -> Result<Value, Error>
  |        -------- required by a bound in this function
  | where
  |     T: Serialize,
  |        ^^^^^^^^^ required by this bound in `to_value`
  = note: this error originates in the attribute macro `app::event` (in Nightly builds, run with -Z macro-backtrace for more info)
